--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/zhihu?useUnicode=true&amp;characterEncoding=utf8&amp;
 spring.datasource.username=root
-spring.datasource.password=wyx12345
+spring.datasource.password=password
 mybatis.config-location=classpath:mybatis-config.xml
 spring.freemarker.cache=false
 spring.freemarker.charset=UTF-8
